# transcriber_aws

./: DockerFile  _agent_ai_academia.py  pyproject.toml  requirements.txt  sound_test_streamlit.py  transcriber_app_academia.py  transcriber_app_fixed.py
.devcontainer/: devcontainer.json  test_sound_stream.py
