[tool.poetry]
name = "transcriber"
version = "0.1.0"
description = ""
authors = ["talabElad <talab@elad.co.il>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncio = "^3.4.3"
streamlit = "^1.40.1"
amazon-transcribe = "^0.6.2"
boto3 = "^1.35.63"
sounddevice = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
